--- a/index.html
+++ b/index.html
@@ -3,13 +3,33 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
+      <link rel="stylesheet" href="./styles.css" />
+      <title>Front-End Developer Test Assignment</title>
    </head>
    <body>
-      <div></div>
+      <div class="container">
+         <div class="pagelink">
+            <a href="">Home</a>
+            <span class="link-icon">
+               <img src="./assets/icons/Arrow_right_long.svg" alt="arrow right" />
+            </span>
+            <a href="">Conveyors</a>
+            <span class="link-icon">
+               <img src="./assets/icons/Arrow_right_long.svg" alt="arrow right" />
+            </span>
+            <a href="">Incline & Decline Conveyors</a>
+         </div>
+
+         <div class="content">
+            <section class="item_gallery"></section>
+            <section class="item_description">
+               <div class="item_heading">
+                  <p>Incline &#38; Decline Conveyors</p>
+               </div>
+               <div class="item_description primary"></div>
+               <div class="item_description secondary"></div>
+            </section>
+         </div>
+      </div>
    </body>
 </html>
-
-
-
-
