add html css content

--- a/index.html
+++ b/index.html
@@ -9,23 +9,72 @@
    <body>
       <div class="container">
          <div class="pagelink">
-            <a href="">Home</a>
-            <span class="link-icon">
+            <a class="pagelink_navlink" href="#home">Home</a>
+            <span class="pagelink_icon">
                <img src="./assets/icons/Arrow_right_long.svg" alt="arrow right" />
             </span>
-            <a href="">Conveyors</a>
-            <span class="link-icon">
+            <a class="pagelink_navlink" href="#conveyors">Conveyors</a>
+            <span class="pagelink_icon">
                <img src="./assets/icons/Arrow_right_long.svg" alt="arrow right" />
             </span>
-            <a href="">Incline & Decline Conveyors</a>
+            <span class="pagelink_navlink" href="">Incline & Decline Conveyors</span>
          </div>
 
          <div class="content">
-            <section class="item_gallery"></section>
-            <section class="item_description">
-               <div class="item_heading">
-                  <p>Incline &#38; Decline Conveyors</p>
+            <section class="item_gallery">
+               <div class="image_wrapper">
+                  <img src="./assets/images/Conveyor 3d-Temp0025.png" alt="Decline Conveyor with items" />
+
+                  <button class="expand">
+                     <img src="./assets/icons/Expand.svg" alt="arrows expand" />
+                  </button>
+
+                  <div class="select-buttons">
+                     <button class="prev">
+                        <img src="./assets/icons/Chevron_left.svg" alt="chevron left" />
+                     </button>
+                     <button class="next">
+                        <img src="./assets/icons/Chevron_right.svg" alt="chevron right" />
+                     </button>
+                  </div>
+
+                  <div class="image-counter">1/6</div>
+                  <p class="image-description">Picture shows conveyor with optional structures amd features</p>
                </div>
+               <div class="image_option__list">
+                  <button class="backward">
+                     <img src="./assets/icons/Chevron_left.svg" alt="chevron left" />
+                  </button>
+
+                  <ul>
+                     <li>
+                        <img src="" alt="" />
+                     </li>
+                     <li>
+                        <img src="" alt="" />
+                     </li>
+                     <li>
+                        <img src="" alt="" />
+                     </li>
+                     <li>
+                        <img src="" alt="" />
+                     </li>
+                     <li>
+                        <img src="" alt="" />
+                     </li>
+                     <li>
+                        <img src="" alt="" />
+                     </li>
+                  </ul>
+
+                  <button class="forward">
+                     <img src="./assets/icons/Chevron_right.svg" alt="chevron right" />
+                  </button>
+               </div>
+            </section>
+
+            <section class="item_content">
+               <h1 class="item_heading">Incline &#38; Decline Conveyors</h1>
                <div class="item_description primary"></div>
                <div class="item_description secondary"></div>
             </section>
