add optional images to item gallery

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          </div>
 
          <div class="content">
-            <section class="item_gallery">
+            <div class="item_gallery">
                <div class="image_wrapper">
                   <img src="./assets/images/Conveyor 3d-Temp0025.png" alt="Decline Conveyor with items" />
 
@@ -48,22 +48,22 @@
 
                   <ul>
                      <li>
-                        <img src="" alt="" />
+                        <img src="./assets/images/Pictures.png" alt="Decline Conveyor items pack" />
                      </li>
                      <li>
-                        <img src="" alt="" />
+                        <img src="./assets/images/Conveyor 3d-Temp0022.png" alt="Decline Conveyorєline" />
                      </li>
                      <li>
-                        <img src="" alt="" />
+                        <img
+                           src="./assets/images/Conveyor 3d-Temp0066.png"
+                           alt="Multiple Decline Conveyor with items pack"
+                        />
                      </li>
                      <li>
-                        <img src="" alt="" />
+                        <img src="./assets/images/Conveyor 3d-Temp0067.png" alt="Multiple Decline Conveyor list" />
                      </li>
                      <li>
-                        <img src="" alt="" />
-                     </li>
-                     <li>
-                        <img src="" alt="" />
+                        <img src="./assets/images/image 29.png" alt="Decline Conveyor drawing" />
                      </li>
                   </ul>
 
@@ -71,13 +71,13 @@
                      <img src="./assets/icons/Chevron_right.svg" alt="chevron right" />
                   </button>
                </div>
-            </section>
+            </div>
 
-            <section class="item_content">
+            <div class="item_content">
                <h1 class="item_heading">Incline &#38; Decline Conveyors</h1>
                <div class="item_description primary"></div>
                <div class="item_description secondary"></div>
-            </section>
+            </div>
          </div>
       </div>
    </body>
