add optional images to item gallery

--- a/index.html
+++ b/index.html
@@ -75,7 +75,61 @@
 
             <div class="item_content">
                <h1 class="item_heading">Incline &#38; Decline Conveyors</h1>
-               <div class="item_description primary"></div>
+               <div class="item_description primary">
+                  <div class="section-title">
+                     <p>
+                        Conveyor Belt Width, in <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
+                     </p>
+                  </div>
+
+                  <div class="radio-select">
+                     <ul>
+                        <li>
+                           <input type="radio" id="radioChoice1" class="radio" name="size" />
+                           <label for="radioChoice1">10"</label>
+                        </li>
+                        <li>
+                           <input type="radio" id="radioChoice2" class="radio" name="size" />
+                           <label for="radioChoice2">18"</label>
+                        </li>
+                        <li>
+                           <input type="radio" id="radioChoice3" class="radio" name="size" />
+                           <label for="radioChoice3">24"</label>
+                        </li>
+                        <li>
+                           <input type="radio" id="radioChoice4" class="radio" name="size" />
+                           <label for="radioChoice4">30"</label>
+                        </li>
+                        <li>
+                           <input type="radio" id="radioChoice5" class="radio" name="size" />
+                           <label for="radioChoice5">36"</label>
+                        </li>
+                        <li>
+                           <input type="radio" id="radioChoice6" class="radio" name="size" />
+                           <label for="radioChoice6">42"</label>
+                        </li>
+                        <li>
+                           <input type="radio" id="radioChoice7" class="radio" name="size" />
+                           <label for="radioChoice7">48"</label>
+                        </li>
+                        <li>
+                           <input type="radio" id="radioChoice8" class="radio" name="size" />
+                           <label for="radioChoice8">54"</label>
+                        </li>
+
+                        <button class="btn-custon active">Custom</button>
+                     </ul>
+                     <div class="input-custon">
+                        <button class="less">
+                           <img src="./assets/icons/Chevron_left.svg" alt="chevron left" />
+                        </button>
+                        <input type="number" value="1" min="1" max="10" />
+                        <button class="more">
+                           <img src="./assets/icons/Chevron_right.svg" alt="chevron right" />
+                        </button>
+                     </div>
+                  </div>
+               </div>
                <div class="item_description secondary"></div>
             </div>
          </div>
