moderate item_content section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,54 @@
                      </fieldset>
                   </div>
                </div>
-               <div class="item_description secondary"></div>
+               <div class="item_description secondary">
+                  <div>
+                     <div class="sku-data">
+                        <p>SKU: <span class="sku-num">WMD-2446F-GRYI</span></p>
+                     </div>
+                     <div class="stock-data">
+                        <img src="./assets/icons/Check.svg" alt="check" />
+                        <p>Upon request</p>
+                     </div>
+                     <div class="item-ratio-data">
+                        <div class="item-ratio__rating">
+                           <span class="item-ratio_icon"><img src="./assets/icons/Star.svg" alt="star ratio" /></span>
+                           <span class="star_ratio__icon"><img src="./assets/icons/Star.svg" alt="star ratio" /></span>
+                           <span class="star_ratio__icon"><img src="./assets/icons/Star.svg" alt="star ratio" /></span>
+                           <span class="star_ratio__icon"><img src="./assets/icons/Star.svg" alt="star ratio" /></span>
+                           <span class="star_ratio__icon"><img src="./assets/icons/Star.svg" alt="star ratio" /></span>
+                        </div>
+                        <span class="item-ratio__count">(20)</span>
+                        <a href="#item:sku"> Read <img src="./assets/icons/Chevron_right.svg" alt="arrow right" /> </a>
+                     </div>
+                  </div>
+                  <span class="divider"></span>
+                  <div>
+                     <p class="item-price">
+                        <span> from </span>
+                        <span class="item-price_total">$22360</span>
+                        <span> ea </span>
+                        <span>*</span>
+                     </p>
+                     <div class="item-amount">
+                        <button class="less" disabled>
+                           <img src="./assets/icons/Minus.svg" alt="minus" />
+                        </button>
+                        <input type="number" value="1" id="amount" />
+                        <button class="more">
+                           <img src="./assets/icons/Plus.svg" alt="plus" />
+                        </button>
+                     </div>
+                     <button class="item-submit">
+                        <img src="./assets/icons/Flag.svg" alt="lang" />
+                        request
+                     </button>
+                     <p class="item-details">
+                        *Final price is defined after a consultation with our specialist due to actual conditions of
+                        use.
+                     </p>
+                  </div>
+               </div>
             </div>
          </div>
       </div>
