add info tooltip

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   </button>
 
                   <ul>
-                     <li>
+                     <li class="selected">
                         <img src="./assets/images/Pictures.png" alt="Decline Conveyor items pack" />
                      </li>
                      <li>
@@ -78,7 +78,15 @@
                <div class="item_description primary">
                   <p class="info-text">
                      Conveyor Belt Width, in
-                     <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
+                     <span class="tooltip-wrapper">
+                        <i>
+                           <img src="./assets/icons/info_circle.svg" alt="info" />
+                        </i>
+                        <span class="tooltip"
+                           >Flexible gravity roller conveyors are ideal for maneuvering into places that are not suited
+                           for conventional conveyor systems.
+                        </span>
+                     </span>
                   </p>
                   <div class="radio-select">
                      <ul>
@@ -128,7 +136,16 @@
                      </div>
                   </div>
                   <p class="info-text">
-                     Conveyor Belt Width, in <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
+                     Bed Section Length, in
+                     <span class="tooltip-wrapper">
+                        <i>
+                           <img src="./assets/icons/info_circle.svg" alt="info" />
+                        </i>
+                        <span class="tooltip hidden"
+                           >Flexible gravity roller conveyors are ideal for maneuvering into places that are not suited
+                           for conventional conveyor systems.
+                        </span>
+                     </span>
                   </p>
                   <div class="size_select">
                      <button class="less">
