moderate mobile styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class="pagelink_icon">
                <img src="./assets/icons/Arrow_right_long.svg" alt="arrow right" />
             </span>
-            <span class="pagelink_navlink">Incline &#38; Decline Conveyors</span>
+            <span class="pagelink_navlink nowrap">Incline &#38; Decline Conveyors</span>
          </div>
 
          <div class="content">
@@ -82,7 +82,7 @@
                         <i>
                            <img src="./assets/icons/info_circle.svg" alt="info" />
                         </i>
-                        <span class="tooltip"
+                        <span class="tooltip hidden"
                            >Flexible gravity roller conveyors are ideal for maneuvering into places that are not suited
                            for conventional conveyor systems.
                         </span>
@@ -157,6 +157,22 @@
                      </button>
                   </div>
                   <div class="additional-options">
+                     <p class="caption info-text">
+                        Additional options
+                        <span class="tooltip-wrapper">
+                           <i>
+                              <img src="./assets/icons/info_circle.svg" alt="info" />
+                           </i>
+                           <span class="tooltip hidden"
+                              >Flexible gravity roller conveyors are ideal for maneuvering into places that are not
+                              suited for conventional conveyor systems.
+                           </span>
+                        </span>
+                     </p>
+                     <div class="caption-expander">
+                        <span> Select options</span>
+                        <img src="./assets/icons/Chevron_Down.svg" alt="Chevron down" />
+                     </div>
                      <fieldset>
                         <div>
                            <input type="checkbox" id="option1" name="Chain-Driven-Feeder" />
@@ -199,7 +215,10 @@
                            <span class="star_ratio__icon"><img src="./assets/icons/Star.svg" alt="star ratio" /></span>
                         </div>
                         <span class="item-ratio__count">(20)</span>
-                        <a href="#item:sku"> Read <img src="./assets/icons/Chevron_right.svg" alt="arrow right" /> </a>
+                        <a href="#item:sku">
+                           <span>Read</span>
+                           <img src="./assets/icons/Chevron_right.svg" alt="arrow right" />
+                        </a>
                      </div>
                   </div>
                   <span class="divider"></span>
