added additional option styles

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                            </span>
                         </span>
                      </p>
-                     <div class="caption-expander">
+                     <div class="caption-expander open">
                         <span> Select options</span>
                         <img src="./assets/icons/Chevron_Down.svg" alt="Chevron down" />
                      </div>
