added expand and collapse options

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
                            <input type="radio" id="radioChoice8" class="radio" name="size" />
                            <label for="radioChoice8">54"</label>
                         </li>
-
-                        <button class="btn-custon active">Custom</button>
+                        <li class="btn-custom">Custom</li>
                      </ul>
                      <div class="size_select custom">
                         <button class="less">
@@ -174,26 +173,28 @@
                         <img src="./assets/icons/Chevron_Down.svg" alt="Chevron down" />
                      </div>
                      <fieldset>
-                        <div>
-                           <input type="checkbox" id="option1" name="Chain-Driven-Feeder" />
-                           <label for="option1">Chain Driven Feeder</label>
-                           <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
-                        </div>
-                        <div>
-                           <input type="checkbox" id="option2" name="Additional-Support" checked />
-                           <label for="option2">Additional Support Structures</label>
-                           <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
-                        </div>
-                        <div>
-                           <input type="checkbox" id="option3" name="Knee-Braces" />
-                           <label for="option3">Knee Braces</label>
-                           <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
-                        </div>
-                        <div>
-                           <input type="checkbox" id="option4" name="Enhanced-support" />
-                           <label for="option4">Enhanced support</label>
-                           <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
-                        </div>
+                        <ul>
+                           <li>
+                              <input type="checkbox" id="option1" name="Chain-Driven-Feeder" />
+                              <label for="option1">Chain Driven Feeder</label>
+                              <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
+                           </li>
+                           <li>
+                              <input type="checkbox" id="option2" name="Additional-Support" checked />
+                              <label for="option2">Additional Support Structures</label>
+                              <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
+                           </li>
+                           <li>
+                              <input type="checkbox" id="option3" name="Knee-Braces" />
+                              <label for="option3">Knee Braces</label>
+                              <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
+                           </li>
+                           <li>
+                              <input type="checkbox" id="option4" name="Enhanced-support" />
+                              <label for="option4">Enhanced support</label>
+                              <span><img src="./assets/icons/info_circle.svg" alt="info" /></span>
+                           </li>
+                        </ul>
                      </fieldset>
                   </div>
                </div>
@@ -251,5 +252,6 @@
             </div>
          </div>
       </div>
+      <script src="./index.js"></script>
    </body>
 </html>
