fixed html errors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <div class="content">
             <div class="item_gallery">
                <div class="image_wrapper">
-                  <img src="./assets/images/Conveyor 3d-Temp0025.png" alt="Decline Conveyor with items" />
+                  <img src="./assets/images/Conveyor-3d-Temp0025.png" alt="Decline Conveyor with items" />
 
                   <button class="expand">
                      <img src="./assets/icons/Expand.svg" alt="arrows expand" />
@@ -51,19 +51,19 @@
                         <img src="./assets/images/Pictures.png" alt="Decline Conveyor items pack" />
                      </li>
                      <li>
-                        <img src="./assets/images/Conveyor 3d-Temp0022.png" alt="Decline Conveyorєline" />
+                        <img src="./assets/images/Conveyor-3d-Temp0022.png" alt="Decline Conveyorєline" />
                      </li>
                      <li>
                         <img
-                           src="./assets/images/Conveyor 3d-Temp0066.png"
-                           alt="Multiple Decline Conveyor with items pack"
+                           src="./assets/images/Conveyor-3d-Temp0066.png"
+                           alt="Multiple Decline Conveyor-with items pack"
                         />
                      </li>
                      <li>
-                        <img src="./assets/images/Conveyor 3d-Temp0067.png" alt="Multiple Decline Conveyor list" />
+                        <img src="./assets/images/Conveyor-3d-Temp0067.png" alt="Multiple Decline Conveyor-list" />
                      </li>
                      <li>
-                        <img src="./assets/images/image 29.png" alt="Decline Conveyor drawing" />
+                        <img src="./assets/images/image-29.png" alt="Decline Conveyor-drawing" />
                      </li>
                   </ul>
 
