--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                            </span>
                         </span>
                      </p>
-                     <div class="caption-expander open">
+                     <div class="caption-expander">
                         <span> Select options</span>
                         <img src="./assets/icons/Chevron_Down.svg" alt="Chevron down" />
                      </div>
