--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Document</title>
-      <link rel="stylesheet" href="/styles.css" />
-      <link rel="stylesheet" href="/styles-mobile.css" />
-      <script src="./script.js" type="text/javascript" defer></script>
+      <link rel="stylesheet" href="styles.css" />
+      <link rel="stylesheet" href="styles-mobile.css" />
+      <script src="script.js" type="text/javascript" defer></script>
    </head>
    <body>
       <header class="header container">
