--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="plans__bg-abstract"></div>
          </section>
 
-         <section hidden class="section container about">
+         <section class="section container about">
             <p class="section__title">About SHKeeper</p>
             <article class="about__article">
                <div class="about__image">
@@ -235,7 +235,7 @@
             <img src="./assets/images/ellipse.svg" alt="elipse" class="elipse about__elipse-sm" />
          </section>
 
-         <section hidden class="section roadmap">
+         <section class="section roadmap">
             <p class="section__title">Road Map</p>
             <div class="roadmap__container">
                <div class="roadmap__section">
@@ -271,11 +271,11 @@
             </div>
          </section>
 
-         <section hidden class="section questions">
+         <section class="section questions">
             <p class="section__title">FAQ</p>
             <ul class="questions__list">
                <li class="questions__item">
-                  <p class="questions__title">What is SHKeeper?</p>
+                  <p class="questions__title"><span>What is SHKeeper?</span></p>
                   <p class="questions__text">
                      SHKeeper is a multifunctional software with many variations of exploitation that can solve problems
                      for different types of users. The processor can be useful for eCommerce project owners, content
@@ -283,7 +283,7 @@
                   </p>
                </li>
                <li class="questions__item active">
-                  <p class="questions__title">Who Can Use SHKeeper?</p>
+                  <p class="questions__title"><span>Who Can Use SHKeeper?</span></p>
                   <p class="questions__text">
                      SHKeeper is a multifunctional software with many variations of exploitation that can solve problems
                      for different types of users. The processor can be useful for eCommerce project owners, content
@@ -291,7 +291,7 @@
                   </p>
                </li>
                <li class="questions__item">
-                  <p class="questions__title">How to Install SHKeeper?</p>
+                  <p class="questions__title"><span>How to Install SHKeeper?</span></p>
                   <p class="questions__text">
                      SHKeeper is a multifunctional software with many variations of exploitation that can solve problems
                      for different types of users. The processor can be useful for eCommerce project owners, content
@@ -299,7 +299,7 @@
                   </p>
                </li>
                <li class="questions__item">
-                  <p class="questions__title">Do I Need to Have an Online Store to Use SHKeeper?</p>
+                  <p class="questions__title"><span>Do I Need to Have an Online Store to Use SHKeeper?</span></p>
                   <p class="questions__text">
                      SHKeeper is a multifunctional software with many variations of exploitation that can solve problems
                      for different types of users. The processor can be useful for eCommerce project owners, content
@@ -307,7 +307,7 @@
                   </p>
                </li>
                <li class="questions__item">
-                  <p class="questions__title">How Does SHKeeper Create a New Address for Each Invoice?</p>
+                  <p class="questions__title"><span>How Does SHKeeper Create a New Address for Each Invoice?</span></p>
                   <p class="questions__text">
                      SHKeeper is a multifunctional software with many variations of exploitation that can solve problems
                      for different types of users. The processor can be useful for eCommerce project owners, content
@@ -315,7 +315,7 @@
                   </p>
                </li>
                <li class="questions__item">
-                  <p class="questions__title">What if I have a problem paying an invoice?</p>
+                  <p class="questions__title"><span>What if I have a problem paying an invoice?</span></p>
                   <p class="questions__text">
                      SHKeeper is a multifunctional software with many variations of exploitation that can solve problems
                      for different types of users. The processor can be useful for eCommerce project owners, content
@@ -323,7 +323,7 @@
                   </p>
                </li>
                <li class="questions__item">
-                  <p class="questions__title">How Much Does It Cost to Run the SHKeeper?</p>
+                  <p class="questions__title"><span>How Much Does It Cost to Run the SHKeeper?</span></p>
                   <p class="questions__text">
                      SHKeeper is a multifunctional software with many variations of exploitation that can solve problems
                      for different types of users. The processor can be useful for eCommerce project owners, content
@@ -332,7 +332,7 @@
                </li>
                <li class="questions__item">
                   <p class="questions__title">
-                     What are the Minimal Requirements to Server Configuration for SHKeeper?
+                     <span> What are the Minimal Requirements to Server Configuration for SHKeeper?</span>
                   </p>
                   <p class="questions__text">
                      SHKeeper is a multifunctional software with many variations of exploitation that can solve problems
@@ -356,7 +356,7 @@
             </div>
          </section>
 
-         <section hidden class="section feedback">
+         <section class="section feedback">
             <p class="section__title">Send us a message</p>
             <form class="feedback__form" autocomplete="on">
                <input
@@ -388,7 +388,7 @@
          </section>
       </main>
 
-      <footer hidden class="footer">
+      <footer class="footer">
          <div class="container footer__content">
             <div class="footer__content-section">
                <div class="footer__title">
