--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
+      <title>Shkeeper payments</title>
       <link rel="stylesheet" href="styles.css" />
       <link rel="stylesheet" href="styles-mobile.css" />
       <script src="script.js" type="text/javascript" defer></script>
+      <link rel="shortcut icon" href="assets/icons/favicon-1.ico" type="image/x-icon" />
    </head>
    <body>
       <header id="top" class="header container">
